apps/security/tenant-guardrails/manifests/deny-tenant-lb-nodeport-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyTenantLbNodeport
metadata:
  name: tenant-deny-lb-nodeport
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaceSelector:
      matchExpressions:
        - key: teams.example.com/team-id
          operator: Exists
